# simply-scriptor-2

./: .gitignore  Cargo.toml  README.md  simply-scriptor-gui.glade
share/locale/af/LC_MESSAGES/: bleachbit.mo
share/locale/ar/LC_MESSAGES/: bleachbit.mo
share/locale/bn/LC_MESSAGES/: bleachbit.mo
share/locale/bs/LC_MESSAGES/: bleachbit.mo
share/locale/ca/LC_MESSAGES/: bleachbit.mo
share/locale/cs/LC_MESSAGES/: bleachbit.mo
share/locale/de/LC_MESSAGES/: bleachbit.mo
share/locale/el/LC_MESSAGES/: bleachbit.mo
share/locale/en_AU/LC_MESSAGES/: bleachbit.mo
share/locale/en_GB/LC_MESSAGES/: bleachbit.mo
share/locale/es/LC_MESSAGES/: bleachbit.mo
share/locale/fi/LC_MESSAGES/: bleachbit.mo
share/locale/fr/LC_MESSAGES/: bleachbit.mo
share/locale/gl/LC_MESSAGES/: bleachbit.mo
share/locale/he/LC_MESSAGES/: bleachbit.mo
share/locale/hi/LC_MESSAGES/: bleachbit.mo
share/locale/ia/LC_MESSAGES/: bleachbit.mo
share/locale/id/LC_MESSAGES/: bleachbit.mo
share/locale/ie/LC_MESSAGES/: bleachbit.mo
share/locale/it/LC_MESSAGES/: bleachbit.mo
share/locale/ja/LC_MESSAGES/: bleachbit.mo
share/locale/ko/LC_MESSAGES/: bleachbit.mo
share/locale/ms/LC_MESSAGES/: bleachbit.mo
share/locale/nb/LC_MESSAGES/: bleachbit.mo
share/locale/nl/LC_MESSAGES/: bleachbit.mo
share/locale/pl/LC_MESSAGES/: bleachbit.mo
share/locale/pt/LC_MESSAGES/: bleachbit.mo
share/locale/pt_BR/LC_MESSAGES/: bleachbit.mo
share/locale/ro/LC_MESSAGES/: bleachbit.mo
share/locale/ru/LC_MESSAGES/: bleachbit.mo
share/locale/sk/LC_MESSAGES/: bleachbit.mo
share/locale/sv/LC_MESSAGES/: bleachbit.mo
share/locale/te/LC_MESSAGES/: bleachbit.mo
share/locale/tr/LC_MESSAGES/: bleachbit.mo
share/locale/uk/LC_MESSAGES/: bleachbit.mo
share/locale/yi/LC_MESSAGES/: bleachbit.mo
share/locale/zh_CN/LC_MESSAGES/: bleachbit.mo
share/locale/zh_TW/LC_MESSAGES/: bleachbit.mo
share/themes/brown/gtk-3.0/: gtk.css
src/: build.rs  lib.rs  macos_events.rs  main.rs  serializable_event.rs
