[package]
name = "simplyscriptor2"
version = "0.3.0"
authors = ["borfus <mrpeteyb@gmail.com>"]
edition = "2021"
description = "Utility to create and run scripts that emulate keyboard and mouse input."
build = "src/build.rs"

[build-dependencies]
winres = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin_sleep = "1.3.3"
chrono = "0.4.19"
rdev = { version = "0.5.1", features = ["serialize"] }
iced = { version = "0.12", features = ["tokio"] }
serde = "1.0.129"
bincode = "1.3.3"
rfd = "0.14"
image = "0.24"
tokio = "1.49.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.bundle]
name = "Simply Scriptor 2"
identifier = "com.borfus.simplyscriptor2"
icon = [
    "resource/icons/simply-scriptor-32x32.ico",
    "resource/icons/simply-scriptor-64x64.ico",
    "resource/icons/simply-scriptor-128x128.ico",
    "resource/icons/simply-scriptor-256x256.ico",
]
resources = ["share"]
